--- a/view/index.html
+++ b/view/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="history-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Lorem ipsum dolor sit re magna aliqua. Ut enim ad minim veniam.  Lorem ipsum dolor sit re magna aliqua. Ut enim ad minim veniam.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Lorem ipsum dolor sit re magna aliqua. Ut enim ad minim veniam.  Lorem ipsum dolor sit re magna aliqua. Ut enim ad minim veniam.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio unde odit repellat molestias suscipit possimus.
                     </div>
                 </div>
             </div>
