--- a/assets/css/home/home.css
+++ b/assets/css/home/home.css
@@ -230,7 +230,6 @@ nav a:focus:after {
   border-radius: 0.5rem;
 }
 
-/* History */
 .history {
   padding-top: 5rem;
 }
@@ -247,4 +246,139 @@ nav a:focus:after {
   color: #5E9EF2;
   margin-left: 2rem;
 }
-/*# sourceMappingURL=main.css.map */
+
+/* Advantages */
+.advantages {
+  margin-top: 10rem;
+}
+
+.adv-title {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.adv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 8%;
+}
+
+.adv-num {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 9rem;
+  border-right: 0.3rem solid #6075DC;
+  padding-right: 3rem;
+}
+
+.adv-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  padding: 2rem 2rem 2rem 3rem;
+}
+
+.adv-con-header {
+  padding-left: 1rem;
+  padding-bottom: 1.5rem;
+}
+
+.adv-con-text {
+  font-size: 1.5rem;
+  padding: 0;
+  padding: 1.5rem 0 0 2rem;
+  border-top: 0.2rem solid #6075DC;
+}
+
+/* Slider */
+.slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slider__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: -webkit-transform 0.6s ease;
+  transition: -webkit-transform 0.6s ease;
+  transition: transform 0.6s ease;
+  transition: transform 0.6s ease, -webkit-transform 0.6s ease;
+}
+
+.slider__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.slider__control {
+  position: absolute;
+  top: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 2.5rem;
+  color: #fff;
+  text-align: center;
+  opacity: 0.5;
+  height: 3.125rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: #6075DC;
+}
+
+.slider__control:hover,
+.slider__control:focus {
+  color: #fff;
+  text-decoration: none;
+  outline: 0;
+  opacity: 0.9;
+}
+
+.slider__control_left {
+  left: 0;
+}
+
+.slider__control_right {
+  right: 0;
+}
+
+.slider__control::before {
+  content: '';
+  display: inline-block;
+  width: 1.25rem;
+  height: 1.25rem;
+  background: transparent no-repeat center center;
+  background-size: 100% 100%;
+}
+
+.slider__control_left::before {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.slider__control_right::before {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+/*# sourceMappingURL=home.css.map */
