--- a/view/index.html
+++ b/view/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/home/home.css">
     <title>Home</title>
 </head>
 <body>
@@ -76,6 +76,63 @@
         </div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="adv-title">
+                        <h1>Advantages</h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="slider">
+                        <div class="slider__wrapper">
+                            <div class="slider__item">
+                                <div class="adv">
+                                    <adv class="adv-num">1</adv>
+                                    <div class="adv-content">
+                                        <div class="adv-con-header">
+                                            <h2>Awards</h2>
+                                        </div>
+                                        <div class="adv-con-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ab magnam quod porro accusantium maxime culpa rem provident error veniam. Fugiat id molestiae fugit rerum voluptates nisi</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="adv">
+                                    <adv class="adv-num">2</adv>
+                                    <div class="adv-content">
+                                        <div class="adv-con-header">
+                                            <h2>Dormitory</h2>
+                                        </div>
+                                        <div class="adv-con-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ab magnam quod porro accusantium maxime culpa rem provident error veniam. Fugiat id molestiae fugit rerum voluptates nisi</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="adv">
+                                    <adv class="adv-num">3</adv>
+                                    <div class="adv-content">
+                                        <div class="adv-con-header">
+                                            <h2>Made in KTL</h2>
+                                        </div>
+                                        <div class="adv-con-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ab magnam quod porro accusantium maxime culpa rem provident error veniam. Fugiat id molestiae fugit rerum voluptates nisi</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="slider__control slider__control_left" href="#" role="button"></a>
+                        <a class="slider__control slider__control_right" href="#" role="button"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="../assets/script/slider1.js"></script>
 </body>
 </html>
