--- a/view/index.html
+++ b/view/index.html
@@ -132,7 +132,161 @@
         </div>
     </section>
 
+    <section class="opinion">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="opinion-title">
+                        <h1>Students opinion</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="slider2">
+                        <div class="slider__wrapper2">
+                            <div class="slider__item2">
+                                <div class="op">
+                                    <div class="col-lg-5">
+                                        <img src="../assets/images/filler.png" alt="" class="student-photo">
+                                    </div>
+                                    <div class="col-lg-7">
+                                        <div class="student-name"><h3>Nakyp Sanzhar Jasulanuly</h3></div>
+                                        <div class="student-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet quis sint quidem commodi et non dolorum dolores, ipsum accusantium illum possimus dignissimos aperiam molestiae soluta eos animi fugit nulla. Lorem ipsum dolor sit amet consectetur adipisicing elit. Error unde molestias optio maiores itaque ex dolorem quis sit harum corrupti, asperiores excepturi omnis nisi labore uptate expedita pariatur?</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="slider__control2 slider__control_left2" href="#" role="button"></a>
+                        <a class="slider__control2 slider__control_right2" href="#" role="button"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="facts">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="facts-title">
+                        <h1>Facts in numbers</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="facts-item">
+                        <span class="facts-num">17</span>
+                        <span class="facts-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos magnam aliquid laboriosam amet provident</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="footer-logo">
+                        <img src="../assets/images/logo/logo_white.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-item">
+                        <div class="footer-title">
+                            <h2>Contacts</h2>
+                        </div>
+                        <div class="footer-contacts">
+                            <div class="footer-contacts-row">
+                                <img src="../assets/images/footer/mail.png" alt="">
+                                <span>kktl@mail.ru</span>
+                            </div>
+                            <div class="footer-contacts-row">
+                                <img src="../assets/images/footer/phone.png" alt="">
+                                <span>8(777)777-77-77</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="footer-item">
+                        <div class="footer-title">
+                            <h2>Location</h2>
+                        </div>
+                        <div class="footer-location">
+                            <a href="https://www.google.kz/maps/place/%D0%9A%D0%B0%D0%B7%D0%B0%D1%85%D1%81%D0%BA%D0%BE-%D0%A2%D1%83%D1%80%D0%B5%D1%86%D0%BA%D0%B8%D0%B9+%D0%BB%D0%B8%D1%86%D0%B5%D0%B9+%D0%B4%D0%BB%D1%8F+%D0%BC%D0%B0%D0%BB%D1%8C%D1%87%D0%B8%D0%BA%D0%BE%D0%B2/@49.8462011,73.200645,483m/data=!3m1!1e3!4m5!3m4!1s0x424348eaf0d3a153:0x553f8563fa7754dd!8m2!3d49.8465131!4d73.2013511"><img src="../assets/images/footer/map.png" alt="" class="footer-location-img"></a>
+                            <div>Kargandy, Aktyubenskaya 1A</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="footer-item">
+                        <div class="footer-title">
+                            <h2>Social media</h2>
+                        </div>
+                        <div class="footer-social">
+                            <div class="footer-social-row">
+                                <a href="https://www.youtube.com/channel/UCsO1yAKQjPL74NAR-8BoAUg">
+                                    <img src="../assets/images/footer/youtube.png" alt="">
+                                </a>
+                                <a href="https://t.me/karbil1">
+                                    <img src="../assets/images/footer/telegram.png" alt="">
+                                </a>
+                            </div>
+                            <div class="footer-social-row">
+                                <a href="https://twitter.com/karbilimschool">
+                                    <img src="../assets/images/footer/twitter.png" alt="">
+                                </a>
+                                <a href="https://www.instagram.com/bil.karagandy/?igshid=16wwqltcneo7v">
+                                    <img src="../assets/images/footer/instagram.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            Made by <a href="#">Hasta Studio</a>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="../assets/script/slider1.js"></script>
+    <script src="../assets/script/slider2.js"></script>
 </body>
 </html>
