--- a/assets/css/home/home.scss
+++ b/assets/css/home/home.scss
@@ -1,7 +1,10 @@
 @import "../variables";
 @import "../start";
-@import "../header";
 
+@import "../header";
 @import "intro";
 @import "history";
 @import "advantages";
+@import "students";
+@import "facts";
+@import "../footer";
